--- a/index.html
+++ b/index.html
@@ -1,19 +1,69 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="src/style.css">
-    <title>Vanilla weather app</title>
-</head>
-<body>
-    <div class="container">
-        <h1>Hello World
-        </h1>
-        <a href="" class="btn btn-primary">Click me</a>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Weather app</title>
+    <link rel="shortcut icon" type="image/png" href="sun.png">
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="style.css" />
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+  </head>
+
+  <body>
+    <div class="box">
+      <div class="container">
+        <div class="input-group rounded">
+          <form id="engine">
+            <input
+              type="search"
+              class="form-control rounded"
+              placeholder="Type your city..."
+              id="search"
+            />
+            <input
+              type="submit"
+              value="Search"
+              class="form-control rounded"
+              id="search-button"
+            />
+          </form>
+          <button id="current-button">📍</button>
+        </div>
+        <div class="row">
+          <div class="col-6">
+            <span class="main">Currently </span>
+            <div id="date">(Current date)</div>
+            <img class="bigSun" src="sun.png" alt="Sun" />
+            <h1 id="current-temp">23</h1>
+            <span class="cf" id="c">°C</span>  
+            <span class="cf"> | </span>  
+            <span class="cf" id="f">°F</span>  
+            <span id="condition">Sunny</span>
+            <span class="main"> in </span>
+            <h2 id="city-name">London</h2>
+            <span class="info" id="humidity"> Humidity: 60%</span>
+            <span class="info" id="wind">Wind: 15 km/h</span>
+          </div>
+          
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
-</body>
-<script src="src/javascript.js"></script>
+    <script src="javascript.js"></script>
+  </body>
+  <footer>
+  </footer>
 </html>
