--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="src/style.css" />
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
   </head>
 
@@ -45,7 +45,7 @@
           <div class="col-6">
             <span class="main">Currently </span>
             <div id="date">(Current date)</div>
-            <img class="bigSun" src="sun.png" alt="Sun" />
+            <img id="icon" src="src/sun.png" alt="Sun" />
             <h1 id="current-temp">23</h1>
             <span class="cf" id="c">°C</span>  
             <span class="cf"> | </span>  
@@ -62,7 +62,7 @@
         </div>
       </div>
     </div>
-    <script src="javascript.js"></script>
+    <script src="src/javascript.js"></script>
   </body>
   <footer>
   </footer>
