Added a signature link

--- a/index.html
+++ b/index.html
@@ -62,6 +62,14 @@
         </div>
       </div>
     </div>
+    <span class="signature"
+      ><a
+        href="https://github.com/MartinaRak/SheCodes/tree/main"
+        target="_blank"
+        >Open-source code</a
+      >
+      by Martina Rak</span
+    >
     <script src="src/javascript.js"></script>
   </body>
   <footer>
