--- a/index.html
+++ b/index.html
@@ -57,22 +57,7 @@
             <span class="info" id="wind">Wind: 15 km/h</span>
           </div>
         </div>
-        <div class="forecast">
-          <div class="row-forecast">
-            <div class="col-6">
-              <div class="forecast-day">Tue</div>
-              <img
-                src="http://openweathermap.org/img/wn/50d@2x.png"
-                alt=""
-                width="45"
-              />
-              <div class="forecast-temp">
-                <span class="forecast-max">25°</span>
-                <span class="forecast-min">20°</span>
-              </div>
-            </div>
-          </div>
-        </div>
+        <div class="forecast" id="forecast"></div>
       </div>
     </div>
     <span class="signature"
